trying to fix zoom problem on mobile

--- a/src/components/HeaderMobile/HeaderMobile.styles.css
+++ b/src/components/HeaderMobile/HeaderMobile.styles.css
@@ -79,9 +79,3 @@
     width: 8rem;
   }
 }
-
-@media screen and (min-width: 45em) {
-  .header-mobile-container {
-    display: none;
-  }
-}
