--- a/src/components/TitleHeader/TitleHeader.styles.css
+++ b/src/components/TitleHeader/TitleHeader.styles.css
@@ -17,23 +17,12 @@
 @media screen and (min-width: 20em) {
   .titleheader-container {
     width: 100vw;
-    height: var(--title-mobile-height);
+    min-height: var(--title-mobile-height);
   }
   .titleheader-title {
     line-height: 0.5rem;
     font-size: 1.2rem;
     margin: 0;
     padding: 0;
-  }
-}
-
-@media screen and (min-width: 45em) {
-  .titleheader-container {
-    height: var(--title-desktop-height);
-    width: 40rem;
-    max-width: calc(100vw - 12rem);
-  }
-  .titleheader-title {
-    line-height: 0.5rem;
   }
 }
